# nano

./: .gitignore  CMakeLists static.txt  CMakeLists.txt  CMakeLists_static_noworking.txt  README.md  app.py  build-main.sh  build-opencv-mobile-ubuntu.sh  build-opencv-mobile.sh  convert-model.sh  cross compile.md  custom buildroot image.md  debug.md  detect.c  detect.h  gdb-entitlement.xml  main  main-debug-opencv.cpp  main-debug.cpp  main-debug2.cpp  main.cpp  main_original.cpp  uvc-camera-main.cpp  v4l-main.cpp  yolov8n_int8_2_class.cvimodel
files/: aruco_board.cpp  capture_cvi.cpp  capture_cvi.h  convert-model.sh  convert-yolo11.sh  cvitek_SG200X_musl_riscv64_defconfig  export_to_onnx.py  highgui.hpp  libbrotlicommon.so.1  libbrotlidec.so.1  libcrypto.so.3  loadsave.cpp  objdetect.hpp  options.txt  qrcode.cpp  resize.cpp  sg2002_licheervnano_sd_defconfig  videocapture.cpp
files/overlay/: S99jotter
files/patches/: pins.patch
fixes/: aruco_utils.cpp  cascadedetect.hpp  matchers.cpp
imx708/: Makefile  README.md  imx708_cmos.c  imx708_sensor_ctl.c
imx708/include/: imx708_cmos_ex.h  imx708_cmos_param.h
instructions/: build-main.md  build-opencv-mobile.md  build-opencv-mobile.sh  debug.md  docker.md
libs/opencv-mobile/: instruction.md
libs/opencv-mobile-4.10.0/include/opencv4/opencv2/: opencv_modules.hpp
libs/opencv-mobile-4.10.0/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
libs/opencv-mobile/opencv-mobile-4.10.0-patch/: steps.md
libs/opencv-mobile/opencv-mobile-4.10.0-source/: options.txt
libs/opencv-mobile/opencv-mobile-4.10.0-source/modules/core/src/: mathfuncs.cpp
libs/opencv-mobile/opencv-mobile-4.10.0-source/modules/highgui/src/: display_win32.cpp  display_win32.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
patches/files/: cascadedetect.cpp  hog.cpp
tmp/: wifi_config  wifi_config1
(+1 files in other folders)
